--- a/src/index.css
+++ b/src/index.css
@@ -62,7 +62,13 @@ header nav {
 }
 main {
   display: flex;
+
+  flex-direction: column;
+}
+.container {
+  display: flex;
   flex-wrap: wrap;
+
   gap: 10px;
 
   justify-content: center;
